@@ -1,10 +1,0 @@
-[GTG Plugin]
-Module=import_json
-Name=Import from JSON
-Short-description="Imports tasks from JSON formatted files."
-Description='''Imports tasks from JSON formatted files.
-'''
-Authors=Bryce Harrington <bryce@canonical.com>
-Version=0.1
-Enabled=False
-Dependencies=re,urllib2
